Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI429NET.VB

        Public Declare Function BTI429_SchedAdvance Lib "BTI42964.DLL" Alias "BTI429_SchedAdvance" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_SchedAgain Lib "BTI42964.DLL" Alias "BTI429_SchedAgain" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBranchEx Lib "BTI42964.DLL" Alias "BTI429_SchedBranchEx" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildAlt Lib "BTI42964.DLL" Alias "BTI429_SchedBuildAlt" (ByVal nummsgs As Int32, ByRef msgaddrs As UInt32, ByRef minperiod As Int32, ByRef maxperiod As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildBuf Lib "BTI42964.DLL" Alias "BTI429_SchedBuildBuf" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal bufcount As Int32, ByRef bufptr As Byte, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildBufEx Lib "BTI42964.DLL" Alias "BTI429_SchedBuildBufEx" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal speed As Int32, ByVal debugval As Int32, ByVal microflag As Int32, ByVal algorithm As Int32, ByVal bufcount As Int32, ByRef bufptr As Byte, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildEx Lib "BTI42964.DLL" Alias "BTI429_SchedBuildEx" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal speed As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildExx Lib "BTI42964.DLL" Alias "BTI429_SchedBuildExx" (ByVal basevalmsgnum As Int32, ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal speed As Int32, ByVal buf As IntPtr, ByVal bufsize As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildExxx Lib "BTI42964.DLL" Alias "BTI429_SchedBuildExxx" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal speed As Int32, ByVal channum As Int32, ByVal debugval As Int32, ByVal microflag As Int32, ByVal algorithm As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildExxxx Lib "BTI42964.DLL" Alias "BTI429_SchedBuildExxxx" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal speed As Int32, ByVal channum As Int32, ByVal debugval As Int32, ByVal microflag As Int32, ByVal algorithm As Int32, ByVal interceptflag As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedCalc Lib "BTI42964.DLL" Alias "BTI429_SchedCalc" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_SchedCallEx Lib "BTI42964.DLL" Alias "BTI429_SchedCallEx" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedCheck Lib "BTI42964.DLL" Alias "BTI429_SchedCheck" (ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal infoptr As IntPtr) As Int32
        Public Declare Sub BTI429_SchedCheckEnd Lib "BTI42964.DLL" Alias "BTI429_SchedCheckEnd" ()
        Public Declare Sub BTI429_SchedCheckMiddle Lib "BTI42964.DLL" Alias "BTI429_SchedCheckMiddle" (ByVal msgnum As UInt32, ByVal minlen As UInt32, ByVal midlen As UInt32, ByVal maxlen As UInt32)
        Public Declare Sub BTI429_SchedCheckReal Lib "BTI42964.DLL" Alias "BTI429_SchedCheckReal" (ByVal msgnum As UInt32, ByVal minlen As UInt32, ByVal midlen As UInt32, ByVal maxlen As UInt32)
        Public Declare Sub BTI429_SchedCheckStart Lib "BTI42964.DLL" Alias "BTI429_SchedCheckStart" ()
        Public Declare Function BTI429_SchedConflicts Lib "BTI42964.DLL" Alias "BTI429_SchedConflicts" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_SchedDivide Lib "BTI42964.DLL" Alias "BTI429_SchedDivide" (ByVal infoptr As IntPtr) As Int32
        Public Declare Function BTI429_SchedFix Lib "BTI42964.DLL" Alias "BTI429_SchedFix" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Sub BTI429_SchedFixEnd Lib "BTI42964.DLL" Alias "BTI429_SchedFixEnd" ()
        Public Declare Sub BTI429_SchedFixMiddle Lib "BTI42964.DLL" Alias "BTI429_SchedFixMiddle" (ByVal conflicts As UInt32)
        Public Declare Sub BTI429_SchedFixStart Lib "BTI42964.DLL" Alias "BTI429_SchedFixStart" ()
        Public Declare Sub BTI429_SchedHook Lib "BTI42964.DLL" Alias "BTI429_SchedHook" (ByVal index As Int32, ByVal ptr As IntPtr)
        Public Declare Function BTI429_SchedInsert Lib "BTI42964.DLL" Alias "BTI429_SchedInsert" (ByVal eventvals As UInt32, ByVal index As UInt32, ByVal msgnum As UInt32, ByRef msgaddr As UInt32, ByVal gapval As UInt32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedInsert2 Lib "BTI42964.DLL" Alias "BTI429_SchedInsert2" (ByVal eventvals As UInt32, ByVal index As UInt32, ByVal msgnum As Int32, ByRef msgaddr As UInt32, ByVal gapval As UInt32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedInsertEnd Lib "BTI42964.DLL" Alias "BTI429_SchedInsertEnd" (ByVal eventvals As UInt32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedInsertStart Lib "BTI42964.DLL" Alias "BTI429_SchedInsertStart" (ByVal eventvals As UInt32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedIntercept Lib "BTI42964.DLL" Alias "BTI429_SchedIntercept" (ByVal typeval As Int32, ByVal msgaddr As UInt32, ByVal gapval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_SchedLayout Lib "BTI42964.DLL" Alias "BTI429_SchedLayout" (ByVal infoptr As IntPtr)
        Public Declare Function BTI429_SchedLogEx Lib "BTI42964.DLL" Alias "BTI429_SchedLogEx" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedMaxval Lib "BTI42964.DLL" Alias "BTI429_SchedMaxval" (ByVal arrayval As UInt32(), ByVal arrayvalcount As UInt32) As UInt32
        Public Declare Function BTI429_SchedMinval Lib "BTI42964.DLL" Alias "BTI429_SchedMinval" (ByVal arrayval As UInt32(), ByVal arrayvalcount As UInt32) As UInt32
        Public Declare Function BTI429_SchedNop Lib "BTI42964.DLL" Alias "BTI429_SchedNop" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedParse Lib "BTI42964.DLL" Alias "BTI429_SchedParse" (ByVal basevalmsgnum As Int32, ByRef msgaddr As UInt32, ByVal channum As Int32, ByVal infoptr As IntPtr, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedPreprocess Lib "BTI42964.DLL" Alias "BTI429_SchedPreprocess" (ByVal nummsgs As Int32, ByVal speedflag As Int32, ByVal msgaddrptr As UInt32(), ByVal minlist As Int32(), ByVal maxlist As Int32(), ByVal debugvalflag As Int32, ByVal targetlist As Int32(), ByRef minorframetime As Int32, ByRef majorframetime As Int32) As Int32
        Public Declare Sub BTI429_SchedPrint Lib "BTI42964.DLL" Alias "" (ByVal ParamArray list() As String)
        Public Declare Sub BTI429_SchedPrintEx Lib "BTI42964.DLL" Alias "" (ByVal ParamArray list() As Int32)
        Public Declare Function BTI429_SchedPulse0 Lib "BTI42964.DLL" Alias "BTI429_SchedPulse0" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedPulse1 Lib "BTI42964.DLL" Alias "BTI429_SchedPulse1" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedReset Lib "BTI42964.DLL" Alias "BTI429_SchedReset" (ByVal infoptr As IntPtr) As Int32
        Public Declare Function BTI429_SchedRotate Lib "BTI42964.DLL" Alias "BTI429_SchedRotate" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_SchedShift Lib "BTI42964.DLL" Alias "BTI429_SchedShift" (ByVal msgnum As Int32, ByVal value As Int32, ByVal infoptr As IntPtr) As Int32
        Public Declare Function BTI429_SchedSlide Lib "BTI42964.DLL" Alias "BTI429_SchedSlide" (ByVal infoptr As IntPtr) As Int32
        Public Declare Sub BTI429_SchedSlideEnd Lib "BTI42964.DLL" Alias "BTI429_SchedSlideEnd" ()
        Public Declare Sub BTI429_SchedSlideMiddle Lib "BTI42964.DLL" Alias "BTI429_SchedSlideMiddle" (ByVal index As UInt32, ByVal count As UInt32, ByVal conflicts As UInt32)
        Public Declare Sub BTI429_SchedSlideStart Lib "BTI42964.DLL" Alias "BTI429_SchedSlideStart" (ByVal factor As UInt32)
        Public Declare Sub BTI429_SchedSort Lib "BTI42964.DLL" Alias "BTI429_SchedSort" (ByVal infoptr As IntPtr)
        Public Declare Function BTI429_SchedToBit Lib "BTI42964.DLL" Alias "BTI429_SchedToBit" (ByVal value As UInt32, ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_SchedToMsec Lib "BTI42964.DLL" Alias "BTI429_SchedToMsec" (ByVal value As UInt32, ByVal infoptr As IntPtr) As UInt32
        Public Declare Sub BTI429_SchedUnsort Lib "BTI42964.DLL" Alias "BTI429_SchedUnsort" (ByVal infoptr As IntPtr)
        Public Declare Function BTI429_SchedUser Lib "BTI42964.DLL" Alias "BTI429_SchedUser" (ByVal useraddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedWalk Lib "BTI42964.DLL" Alias "BTI429_SchedWalk" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_SchedWriteBuf Lib "BTI42964.DLL" Alias "BTI429_SchedWriteBuf" (ByRef bufptr As Byte, ByVal bufcount As Int32, ByVal schaddr As UInt32, ByVal schedcount As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_TestProtocol Lib "BTI42964.DLL" Alias "BTI429_TestProtocol" (ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Transpose12 Lib "BTI42964.DLL" Alias "BTI429_Transpose12" (ByVal val As UInt16) As UInt16
    End Class
